--- a/_posts/2019-07-10-the-us-narrative-today.html
+++ b/_posts/2019-07-10-the-us-narrative-today.html
@@ -2453,107 +2453,107 @@ stories:
   domain: http://www.henryherald.com/
   link: https://www.henryherald.com/features/joe-taslim-joins-james-wan-s-mortal-kombat-reboot/image_aebc77d8-de38-5c6b-b7e3-2239a8ed4dbc.html
 images:
-- name: curtain-curtain-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-sand-paper.jpg
-- name: old-barn-old-barn-1500-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-sunday.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-gred-mash.jpg
-- name: beach-clouds-lifeguard-beachclouds-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-constitution.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-propaganda-leaflets.jpg
-- name: oldroad-old-road-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-purple-storm.jpg
-- name: mediterranean-mediterranean-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-green-zuma.jpg
-- name: adam-smith-adam-smith-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-hot-spicy.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-brush.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dali-two.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
+- name: beach-rocks-beach-rocks-currents-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-copper-circuit.jpg
+- name: store-on-corner-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-really-hot.jpg
+- name: gypsy-wagon-gypsywagon-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-ww2-color.jpg
+- name: ellis-island-ellisisland-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-dark-soul.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-alberto-giacometti.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-alberto-giacometti.png
+- name: castle-wall-DSC-0067-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-matrix.JPG
+- name: stories-window-mountain-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-window-mountain-clean-view.jpg
+- name: udnie-IMG_4425.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4425.jpg
+- name: mosaic-face-mosaic-face-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-ww2-color.jpg
+- name: gears-4882162452-fa3126b38d-b-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-crafty-painting.jpg
+- name: cargo-ship-cargo-ship-on-sea-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-propaganda-leaflets.jpg
+- name: gears-4882162452-fa3126b38d-b-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-wols.jpg
+- name: razorcliff-razorcliff-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-creativity.jpg
+- name: downtown-los-angeles-downtown-la-really-hot.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-really-hot.JPG
+- name: beach-clouds-lifeguard-beachclouds-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-oily-mcoilface.jpg
+- name: crow-crow-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-constitution.jpg
+- name: supreme-court-supremecourt-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-internet-numbers.jpg
+- name: gears-4882162452-fa3126b38d-b-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dark-soul.jpg
+- name: aws-s3-stories-power-lines-empty-space-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-power-lines-empty-space-copper-circuit.jpg
+- name: server-cloud-server-racks-door-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dark-dali.jpg
+- name: art-museum-art-museum-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-space-pizza.jpg
+- name: aws-s3-goldsilverfalls-goldsilverfalls-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-goldsilverfalls-goldsilverfalls-still-600.jpg
+- name: fence-fence-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-matrix.jpg
+- name: flower-barbed-wire-flower-barbed-wire-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dali-three.jpg
+- name: beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
+- name: crow-crow-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colorful-dream.jpg
+- name: server-cloud-server-racks-clouds-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-cinnamon-rolls.jpg
+- name: aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
+- name: hollywood-building-hollywood-building-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-brush.jpg
+- name: windowmountain-window-mountain-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-far-away.jpg
+- name: rockingchair-rockingchair-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-colored-circuits.jpg
+- name: border-crossing-bordercrossing-satan-red.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-satan-red.png
+- name: old-gas-pumps-oldgaspumps-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-constitution.jpg
+- name: death-valley-death-valley-national-park-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-internet-numbers.jpg
+- name: adam-smith-adam-smith-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-bright-sand.jpg
+- name: oldsmallboat-oldsmallboat-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-wols.jpg
+- name: mediterranean-mediterranean-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-granite.jpg
+- name: crow-crow-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-rainbow-festival.jpg
+- name: wind-mills-windmills-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-blue-granite.jpg
+- name: old-school-house-old-schoolhouse-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-purp-paper.jpg
+- name: yosemite-yosemite-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-yellow-paper.jpg
+- name: amusement-park-amusement-park-2-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-feed-people.jpg
+- name: rain-princess-IMG_7788.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7788.jpg
+- name: IMG_4038_blue_circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/IMG_4038_blue_circuit.jpg
+- name: catacombs-catacombs-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-neo-instinct.jpg
+- name: paris-paris.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris.jpg
+- name: bluelake-purple-pond-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purple-pond-file-00-00-00-00.jpg
+- name: old-door-lock-old-door-lock-2-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-really-hot.jpg
 - name: castle-on-hill-castle-on-hill-edinburgh-light-dali.JPG
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-light-dali.JPG
-- name: berlinwall-DSC-0084-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-smoking-cigarette.jpg
-- name: razorcliff-razorcliff-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-aqua.jpg
-- name: san-francisco-street-view-san-francisco-street-view-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-copper-circuit-2.jpg
-- name: supreme-court-supremecourt-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-cinnamon-rolls.jpg
-- name: yosemite-yosemite-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-pablo-blue.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-yellow-collage.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-yellow-collage.png
-- name: los-angeles-from-observatory-losangeles-from-observatory-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-gred-mash.jpg
-- name: udnie-IMG_1184.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_1184.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-light-dali.jpg
-- name: downtown-trucksilo-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-far-away.jpg
-- name: old-school-house-old-schoolhouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-really-hot.jpg
-- name: crow-crow-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-brush.jpg
-- name: beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
-- name: oldhotel-oldhotel-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-atari-asteroids.jpg
-- name: art-museum-art-museum-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-matrix.jpg
-- name: razorcliff-razorcliff-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-bright-sand.jpg
-- name: docks-docks-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-pablo-blue.jpg
-- name: ellis-island-ellis-island-room-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-ww2-dresden.jpg
-- name: oldhouse-oldhouse-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-sunday.jpg
-- name: lincoln-memorial-lincolnmemorial-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-plentiful.jpg
-- name: supreme-court-supremecourt-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-bright-sand.jpg
-- name: oldcabin-store-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-oily-mcoilface.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-free-woman.jpg
-- name: razorcliff-razorcliff-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-crabapple.jpg
-- name: powerlines-power-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-kandinsky-bv.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kand-two.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-atari-asteroids.jpg
-- name: locked-up-steam-lock-up-steam-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purp-paper.jpg
-- name: oldtrain-oldtrain-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-kandinsky-bv.jpg
-- name: mediterranean-mediterranean-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-cinnamon-rolls.jpg
-- name: legal-statue-legalstatue-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-space-pizza.jpg
-- name: bordercrossing-bordercrossing-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-sunday.jpg
-- name: windowmountain-window-mountain-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-green-zuma.jpg
-- name: old-school-house-old-schoolhouse-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crunch-paper.jpg
-- name: gypsymosaic-gypsy-eyes-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-crabapple.jpg
-- name: power-lines-power-lines-empty-space-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit-3.jpg
-- name: christianity-christianity-under-construction-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-umberto-bocc.jpg
-- name: abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
-- name: status-berlin-status-berlin-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-rainbow-festival.jpg
 ---
 Geri Horner's Husband Slams Her Driving.&nbsp;New Life Outreach Ministries To Host Youth Conference.&nbsp;Peace For Ponies Open House.&nbsp;Sol House Vigil Will Protest Detention Centers, Poor Conditions For Immigrants.&nbsp;Memorial To Marathon Bombing Victims Takes Shape In Boston.&nbsp;Snohomish Announces Movies In The Park Lineup.&nbsp;Woman Pulled From Woodbury Pool Drowned Accidentally, Officials Say.&nbsp;Frehley Ready For Blastoff.&nbsp;
